[gd_scene load_steps=11 format=2]

[ext_resource path="res://juego/menus/TutorialMovimiento.tscn" type="PackedScene" id=1]
[ext_resource path="res://juego/menus/TutorialMovimientoSaltar.tscn" type="PackedScene" id=2]
[ext_resource path="res://juego/menus/TutorialDash.tscn" type="PackedScene" id=3]
[ext_resource path="res://recursos/Background/bg_layer2.png" type="Texture" id=23]
[ext_resource path="res://recursos/Background/bg_layer3.png" type="Texture" id=24]
[ext_resource path="res://recursos/Background/bg_layer4.png" type="Texture" id=25]
[ext_resource path="res://recursos/Background/bg_layer1.png" type="Texture" id=26]
[ext_resource path="res://juego/niveles/Nivel.gd" type="Script" id=27]
[ext_resource path="res://juego/menus/MenuPausa.tscn" type="PackedScene" id=28]
[ext_resource path="res://juego/HUD/HUD.tscn" type="PackedScene" id=29]

[node name="Nivel" type="Node"]
script = ExtResource( 27 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_offset = Vector2( 0, -400 )

[node name="ParallaxFondo" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 2048, 2048 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxFondo"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 26 )

[node name="ParallaxNubes" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxNubes"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 23 )

[node name="ParallaxNubesMedias" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.6, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxNubesMedias"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 24 )

[node name="ParallaxNubesCercanas" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxNubesCercanas"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 25 )

[node name="CapaFrente" type="CanvasLayer" parent="."]

[node name="HUD" parent="CapaFrente" instance=ExtResource( 29 )]

[node name="MenuPausa" parent="CapaFrente" instance=ExtResource( 28 )]
visible = false

[node name="TutorialMovimiento" parent="CapaFrente" instance=ExtResource( 1 )]
visible = false

[node name="TutorialMovimientoSaltar" parent="CapaFrente" instance=ExtResource( 2 )]
visible = false

[node name="TutorialDash" parent="CapaFrente" instance=ExtResource( 3 )]
visible = false

[node name="PlataformasTrampa" type="Node" parent="."]

[node name="PlataformasNormales" type="Node" parent="."]

[node name="PlataformasCortas" type="Node" parent="."]

[node name="PlataformasLargas" type="Node" parent="."]

[node name="Enemigos" type="Node" parent="."]

[node name="Da√±o" type="Node" parent="."]

[node name="Monedas" type="Node" parent="."]

[node name="Zanahorias" type="Node" parent="."]

[node name="PowerUps" type="Node" parent="."]

[node name="Rayos" type="Node2D" parent="."]
